# Geometry-Aware-Demonstration-Augmentation

./: .gitignore  CMakeLists.txt
apps/libigl/tutorial/: CMakeLists.txt
apps/libigl/tutorial/MyTest/: main.cpp
apps/reshaping_app/: CMakeLists.txt  application.cpp  application.h  arrow_mesh_builder.cpp  arrow_mesh_builder.h  camera.cpp  camera.h  camera_parameters.cpp  camera_parameters.h  camera_serialization.cpp  camera_serialization.h  color_scheme_data.cpp  color_scheme_data.h  crop_frame.h  cylinder_mesh_builder.cpp  cylinder_mesh_builder.h  debug_renderer.cpp  debug_renderer.h  edit_renderer.cpp  edit_renderer.h  globals.h  imgui_utils.h  input_event_notifier.cpp  input_event_notifier.h  json_utils.h  main.cpp  matrix_to_vector.h  model_renderer.cpp  model_renderer.h  reshaping_editor.cpp  reshaping_editor.h  scene_viewer.cpp  scene_viewer.h  scene_viewer_panel.cpp  scene_viewer_panel.h  selection_handler.cpp  selection_handler.h  selection_renderer.cpp  selection_renderer.h  sphere_mesh_builder.cpp  (+3 more)
apps/reshaping_app/assets/: icons.ai
apps/reshaping_app/shaders/: blinn_phong_reflection_model_wire.fs  blinn_phong_reflection_model_wire.gs  blinn_phong_reflection_model_wire.vs
apps/reshaping_demo/: CMakeLists.txt  load_input_data.cpp  load_input_data.h  main.cpp
cmake/: cli11.cmake  cmake_utils.cmake  glad.cmake  glfw.cmake  glm.cmake  imgui.cmake  imguizmo.cmake  lagrange.cmake  nfd.cmake  nlohmann_json.cmake  polyscope.cmake  spdlog.cmake  stb_image.cmake
include/mesh_reshaping/: compute_max_vertex_change.h  data_filenames.h  edit_operation.h  face_principal_curvatures_io.h  globals.h  handle_error_distribution.h  lagrange_types.h  length_based_edge_weight.h  load_feature_edges.h  precompute_reshaping_data.h  reshaping_data.h  reshaping_energy.h  reshaping_params.h  reshaping_tool.h  reshaping_tool_io.h  similarity_term.h  solve_utils.h  sphericity_terms_info.h  straight_chains.h  termination_criterion.h  transformation_solve.h  transformation_solve_energy.h  types.h  vertex_solve.h  vertex_solve_energy.h
libs/ca_essentials/: CMakeLists.txt
libs/ca_essentials/include/ca_essentials/core/: bounding_box.h  color.h  compute_flat_mesh.h  crop_image.h  edges_centroid.h  face_centroid.h  flatten_matrix.h  geom_utils.h  json_utils.h  logger.h  timer.h  unflatten_matrx.h  unordered_int_pair.h
libs/ca_essentials/include/ca_essentials/io/: saveOBJ.h
libs/ca_essentials/include/ca_essentials/meshes/: build_cylinder_mesh.h  compute_edge_normals.h  compute_triangle_normal.h  debug_utils.h  dihedral_angles.h  false_barycentric_subdivision.h  load_trimesh.h  normalize_to_unitbox.h  save_trimesh.h  trimesh.h
libs/ca_essentials/include/ca_essentials/renderer/: framebuffer.h  gl_debug.h  glslprogram.h  light.h  material.h  texture_provider.h  version.h
libs/ca_essentials/include/ca_essentials/ui/: imgui_font_provider.h  imgui_toggle_image_button.h  imgui_toolbar.h  imgui_utils.h  window.h
libs/ca_essentials/source/core/: color.cpp  compute_flat_mesh.cpp  edges_centroid.cpp  face_centroid.cpp  logger.cpp
libs/ca_essentials/source/io/: saveOBJ.cpp
libs/ca_essentials/source/meshes/: build_cylinder_mesh.cpp  compute_triangle_normal.cpp  debug_utils.cpp  false_barycentric_subdivision.cpp  load_trimesh.cpp  normalize_to_unitbox.cpp  save_trimesh.cpp  trimesh.cpp
libs/ca_essentials/source/renderer/: framebuffer.cpp  glslprogram.cpp  texture_provider.cpp
libs/ca_essentials/source/ui/: imgui_toggle_image_button.cpp  imgui_toolbar.cpp  window.cpp
models/: cutlery_s26-1.cam  cutlery_s26-1.deform  cutlery_s26-1.fk  cutlery_s26-1.straight  cylinder_1kF.cam  cylinder_1kF.deform  cylinder_1kF.fk  e_car_extruded.cam  e_car_extruded.deform  e_car_extruded.fk  e_car_extruded.straight  espresso.cam  espresso.deform  espresso.fk  espresso.straight  f5-1_antique_chair.cam  f5-1_antique_chair.deform  f5-1_antique_chair.fk  m0839_sofa.cam  m0839_sofa.deform  m0839_sofa.fk  m0839_sofa.straight  phone.cam  phone.deform  phone.fk  screwdriver.cam  screwdriver.deform  screwdriver.fk
processed_models/mugs_remeshed/: mug_1.fk  mug_2.fk  mug_3.fk  mug_4.fk
processed_models/plates_remeshed/: plate_1.fk  plate_2.fk  plate_3.fk  plate_4.fk  plate_5.fk
python/: m0839_sofa_debug.fk
python/MUG_TEST/: mug_1.deform  mug_1_fit.deform  mug_1_fit.fk
source/mesh_reshaping/: data_filenames.cpp  edit_operation.cpp  face_principal_curvatures_io.cpp  handle_error_distribution.cpp  load_feature_edges.cpp  precompute_reshaping_data.cpp  reshaping_energy.cpp  reshaping_tool.cpp  reshaping_tool_io.cpp  similarity_term.cpp  sphericity_terms_info.cpp  straight_chains.cpp  transformation_solve.cpp  transformation_solve_energy.cpp  vertex_solve.cpp  vertex_solve_energy.cpp
tools/: cylinder_fitting.py  fkprocess.cpp  preprocess.py  run_demo.py  run_script.py  z_constrained_projection.py
